--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>HTML Template</title>
+    <title>Concerned With Osteoporosis?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
@@ -149,7 +149,12 @@
                             </p>
                         </td>
                     </tr>
+                    <tr>
+                        <td align="center">
+                            <img src="AdobeStock_110953426.jpeg" alt="Lucky women" width="100%">
 
+                        </td>
+                    </tr>
                     <tr>
                         <td>
                             <p><span>We provide a medically proven treatment for Osteoporosis that requires no
@@ -250,12 +255,7 @@
                             </p>
                         </td>
                     </tr>
-                    <tr>
-                        <td align="center">
-                            <img src="AdobeStock_167381676.jpeg" alt="Our team" width="100%">
 
-                        </td>
-                    </tr>
                     <tr>
                         <td align="center">
                             <p><strong>For More Information </strong>
