--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </tr>
                     <tr>
                         <td align="center">
-                            <img src="AdobeStock_110953426.jpeg" alt="Lucky women" width="100%">
+                            <img src="AdobeStock_110953426.jpeg" alt="Happy women" width="100%">
 
                         </td>
                     </tr>
@@ -268,7 +268,7 @@
 
                     <tr>
                         <td>
-                            <p>Maeve, General Manager  <br>
+                            <p>Maeve King, General Manager<br>
                                 SuperSlow Zone
                             </p>
                         </td>
