--- a/Новая папка/index.html
+++ b/Новая папка/index.html
@@ -39,6 +39,10 @@
             border-radius: 5px;
         }
 
+        .bg-light {
+            background-color: #dde8fc;
+        }
+
         .btn:hover,
         .btn:active {
             background-color: #0b93e9;
@@ -49,6 +53,11 @@
 
         .link-dark {
             color: #686868;
+        }
+
+        .padding {
+            padding-top: 60px;
+            padding-bottom: 60px;
         }
 
         a:hover {
@@ -74,7 +83,7 @@
             color: #686868;
             font-size: 16px;
             font-weight: 400;
-            line-height: 22px;
+            line-height: 26px;
             letter-spacing: 0.28px;
             margin: 0.5em;
         }
@@ -167,8 +176,7 @@
                 </tr>
                 <tr>
                     <td align="center">
-                        <img src="https://qnopka.github.io/test/AdobeStock_110953426.jpeg" alt="Happy women" width="100%">
-
+                            <img src="https://qnopka.github.io/test/AdobeStock_110953426.jpeg" alt="Happy women" width="100%">
                     </td>
                 </tr>
                 <tr>
@@ -184,7 +192,14 @@
                         </p>
                     </td>
                 </tr>
-
+                <tr>
+                    <td class="bg-light">
+                        <p class="padding" align="center">Sign up to learn more about SuperSlow Zone by <span>Thursday, May 6, 2021</span>, and your first session will be <strong>FREE</strong>.
+                            <a href="https://sszhouston.lpages.co/non-drug-osteoporosis-treatment/?utm_source=Email&utm_medium=clickhere&utm_campaign=sszhouston"
+                               target="_blank" class="btn">Click Here</a>  to sign up now!
+                        </p>
+                    </td>
+                </tr>
                 <tr>
                     <td>
                         <p>Hi, I’m Maeve King, General Manager of SuperSlow Zone.
@@ -216,7 +231,7 @@
 
                 <tr>
                     <td>
-                        <p><a href="https://sszhouston.lpages.co/non-drug-osteoporosis-treatment/"
+                        <p><a href="https://sszhouston.lpages.co/non-drug-osteoporosis-treatment/?utm_source=Email&utm_medium=clickhere&utm_campaign=sszhouston"
                               target="_blank" class="btn">Click Here</a> to Learn More.
                         </p>
                     </td>
@@ -255,28 +270,10 @@
                 </tr>
 
                 <tr>
-                    <td>
-                        <p><strong>Covid is no reason to wait. It’s too risky. </strong> There is a safe solution
-                            now.
-                            As an essential service in Houston, we gladly maintain the highest degree of safety
-                            for our clients.
-
-                        </p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <p>You owe it to your family and loved ones.
-                        </p>
-                    </td>
-                </tr>
-
-                <tr>
                     <td align="center">
                         <p><strong>For More Information </strong>
                         </p>
-                        <p><a href="https://sszhouston.lpages.co/non-drug-osteoporosis-treatment/"
+                        <p><a href="https://sszhouston.lpages.co/non-drug-osteoporosis-treatment/?utm_source=Email&utm_medium=clickhere&utm_campaign=sszhouston"
                               target="_blank" class="btn">Click Here</a>
                         </p>
                     </td>
